--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -14,6 +14,11 @@
 							<i class="fa fa-user-o" aria-hidden="true"></i>
 						</span>
 					</div>
+					{% if errors.username%}
+					<span class="txt1">
+						{{errors.username}}
+					</span>
+					{% endif %}
 
 					<div class="wrap-input100 validate-input" data-validate = "Password is required">
 						<input class="input100" type="password" name="password" placeholder="Password">
