--- a/store/templates/store/shop.html
+++ b/store/templates/store/shop.html
@@ -27,12 +27,12 @@
     			</div>
     		</div>
     		<div class="row">
-				{% for product in data %}
+{% for product in data %}
     			<div class="col-md-6 col-lg-3 ftco-animate">
     				<div class="product">
     					<a href="{% url 'store:product' product.id %}" class="img-prod"><img class="img-fluid" src="/{{ product.image }}" alt="Colorlib Template">
-    						{% if product.discount_value %}
-							<span class="status">{{product.discount_value}}</span>
+							{% if product.discount_value %}
+    						<span class="status">{{product.discount_value}}%</span>
 							{% endif %}
     						<div class="overlay"></div>
     					</a>
@@ -41,7 +41,7 @@
     						<div class="d-flex">
     							<div class="pricing">
 									{% if product.discount_value %}
-		    						<p class="price"><span class="mr-2 price-dc">{{product.price_before}}</span><span class="price-sale">{{product.price_after|floatformat:2}}</span></p>
+		    						<p class="price"><span class="mr-2 price-dc">${{product.price_before}}</span><span class="price-sale">${{product.price_after}}</span></p>
 									{% else %}
 									<p class="price"><span>${{product.price_before}}</span></p>
 									{% endif %}
@@ -55,7 +55,7 @@
 	    							<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
 	    								<span><i class="ion-ios-cart"></i></span>
 	    							</a>
-	    							<a href="#" class="heart d-flex justify-content-center align-items-center ">
+	    							<a href="{% url 'store:add_to_wishlist' product.id %}" class="heart d-flex justify-content-center align-items-center ">
 	    								<span><i class="ion-ios-heart"></i></span>
 	    							</a>
     							</div>
@@ -63,7 +63,7 @@
     					</div>
     				</div>
     			</div>
-				{% endfor %}
+{% endfor %}
     		</div>
     		<div class="row mt-5">
           <div class="col text-center">
